Fixed item alignments

--- a/style.css
+++ b/style.css
@@ -704,6 +704,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    align-items: center;
     border-radius: 2rem;
     transform: scale(0.95);
     transition: all 0.4s ease;
@@ -2995,7 +2996,6 @@ body {
 #contact {
     padding: 8rem 0 4rem;
     background: radial-gradient(circle at 50% 100%, #0a1929 0%, #020d1a 100%);
-    text-align: center;
     position: relative;
     overflow: hidden;
 }
